Fixed signup page

--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -20,218 +20,223 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="259dp"
-        android:layout_marginEnd="41dp"
-        android:layout_marginBottom="155dp"
+        android:layout_width="343dp"
+        android:layout_height="511dp"
+        android:layout_marginTop="178dp"
+        android:layout_marginBottom="118dp"
+        android:tintMode="screen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.754"
-        app:srcCompat="@drawable/image_view_rectanglesignup" />
+        app:srcCompat="@drawable/image_view_rectanglesignup"
+        app:tint="#95C3C3C3" />
 
     <Button
         android:id="@+id/btnSignupPage2"
         android:layout_width="130dp"
         android:layout_height="60dp"
-        android:layout_marginTop="269dp"
-        android:layout_marginEnd="221dp"
+        android:layout_marginStart="198dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="65dp"
         android:layout_marginBottom="517dp"
         android:background="#00FFFFFF"
         android:text="Signup"
+        android:textColor="#000000"
         android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
-        app:layout_constraintEnd_toEndOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/image_logo" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btnLoginPage2"
         android:layout_width="130dp"
         android:layout_height="60dp"
-        android:layout_marginStart="83dp"
-        android:layout_marginTop="269dp"
-        android:layout_marginBottom="517dp"
+        android:layout_marginStart="44dp"
         android:background="#00FFFFFF"
         android:text="Login"
+        android:textColor="#B3E1F5FE"
         android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
-        app:layout_constraintStart_toStartOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/image_logo" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/btnSignupPage2"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.121" />
 
     <ImageView
         android:id="@+id/image_background"
-        android:layout_width="227dp"
-        android:layout_height="202dp"
-        android:layout_marginStart="103dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="234dp"
-        android:layout_marginBottom="600dp"
+        android:layout_width="182dp"
+        android:layout_height="143dp"
         android:scaleType="centerInside"
         android:src="@drawable/image_background"
-        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
-        app:layout_constraintEnd_toEndOf="@+id/image_logo"
-        app:layout_constraintStart_toStartOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/image_logo" />
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <FrameLayout
+        android:id="@+id/container_button"
+        android:layout_width="193dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="586dp"
+        android:layout_marginBottom="174dp"
+        android:background="@drawable/container_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="162dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:background="#00FFFFFF"
+            android:text="Signup"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            tools:ignore="TouchTargetSizeCheck" />
+    </FrameLayout>
 
     <EditText
         android:id="@+id/txtLUsername"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="270dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="319dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginBottom="438dp"
         android:background="@drawable/image_view_rectangle1"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <FrameLayout
-        android:id="@+id/container_button"
-        android:layout_width="224dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="761dp"
-        android:layout_marginEnd="236dp"
-        android:layout_marginBottom="35dp"
-        android:background="@drawable/container_button"
-        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
-        app:layout_constraintEnd_toEndOf="@+id/image_logo"
-        app:layout_constraintStart_toStartOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/image_logo">
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#00FFFFFF"
-            android:text="Signup"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-    </FrameLayout>
-
-    <EditText
-        android:id="@+id/edtEmail"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="180dp"
-        android:background="@drawable/image_rectangle200"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <EditText
-        android:id="@+id/txtLPassword"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="312dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="88dp"
-        android:background="@drawable/image_view_rectangle1"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <EditText
-        android:id="@+id/edtCPassword"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="396dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="4dp"
-        android:background="@drawable/image_view_rectangle2"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        android:nextFocusDown="@id/edtEmail"
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/container_pass"
-        android:layout_width="160dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="602dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="40dp"
+        android:id="@+id/container_pass1"
+        android:layout_width="93dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="62dp"
+        android:layout_marginTop="306dp"
+        android:layout_marginEnd="238dp"
+        android:layout_marginBottom="476dp"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Confirm Password"
+        android:text="Username"
         android:textColor="#FF000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/edtCPassword"
-        app:layout_constraintEnd_toEndOf="@+id/edtCPassword"
-        app:layout_constraintTop_toTopOf="@+id/image_logo"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_email"
         android:layout_width="51dp"
         android:layout_height="22dp"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="209dp"
-        android:layout_marginEnd="443dp"
-        android:layout_marginBottom="388dp"
+        android:layout_marginTop="373dp"
+        android:layout_marginEnd="270dp"
+        android:layout_marginBottom="412dp"
         android:alpha="0.800000011920929"
         android:gravity="left|center_vertical"
         android:text="Email"
         android:textColor="#FF000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/image_logo"
-        app:layout_constraintEnd_toEndOf="@+id/image_logo"
-        app:layout_constraintStart_toStartOf="@+id/image_logo"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/container_pass1"
-        android:layout_width="93dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="118dp"
-        android:layout_marginEnd="217dp"
-        android:layout_marginBottom="307dp"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="Username"
-        android:textColor="#FF000000"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+    <EditText
+        android:id="@+id/edtEmail"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="384dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginBottom="373dp"
+        android:background="@drawable/image_rectangle200"
+        android:nextFocusDown="@id/txtLPassword"
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="86dp"
         android:layout_height="23dp"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="299dp"
-        android:layout_marginEnd="217dp"
-        android:layout_marginBottom="128dp"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="438dp"
+        android:layout_marginEnd="238dp"
+        android:layout_marginBottom="346dp"
         android:text="Password"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/txtLPassword"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginEnd="47dp"
+        android:background="@drawable/image_view_rectangle1"
+        android:inputType="textPassword"
+        android:nextFocusDown="@id/edtCPassword"
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
+        app:layout_constraintVertical_bias="0.04"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <TextView
+        android:id="@+id/container_pass"
+        android:layout_width="160dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="505dp"
+        android:layout_marginEnd="179dp"
+        android:layout_marginBottom="278dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="Confirm Password"
+        android:textColor="#FF000000"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/edtCPassword"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="518dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="239dp"
+        android:background="@drawable/image_view_rectangle2"
+        android:inputType="textPassword"
+        android:nextFocusDown="@id/button"
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
