--- a/app/src/main/res/layout/app_landing_page.xml
+++ b/app/src/main/res/layout/app_landing_page.xml
@@ -10,10 +10,12 @@
 
   <ImageView
       android:id="@+id/container_image"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="409dp"
+      android:layout_height="892dp"
       android:scaleType="centerInside"
       android:src="@drawable/container_image"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,7 +23,7 @@
       android:id="@+id/logo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="100dp"
+      android:layout_marginTop="96dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
